--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.FormCliente" />
+        <activity android:name=".Activities.MenuPrincipal"></activity>
     </application>
 
 </manifest>
