--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name=".Activities.FormCliente" />
         <activity android:name=".Activities.Informacion" />
-        <activity android:name=".Activities.RegistroVentas"></activity>
+        <activity android:name=".ventas.RegistroVentas"></activity>
         <activity android:name=".Activities.MenuPrincipal"></activity>
     </application>
 
