--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
         </activity>
         <activity android:name=".Activities.FormCliente" />
         <activity android:name=".Activities.Informacion" />
-        <activity android:name=".ventas.RegistroVentas"></activity>
-        <activity android:name=".Activities.MenuPrincipal"></activity>
+        <activity android:name=".ventas.RegistroVentas" />
+        <activity android:name=".Activities.MenuPrincipal" />
+        <activity android:name=".ventas.cantproducto"></activity>
     </application>
 
 </manifest>
