--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,6 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,7 +28,12 @@
         <activity android:name=".Activities.Informacion" />
         <activity android:name=".ventas.RegistroVentas" />
         <activity android:name=".Activities.MenuPrincipal" />
-        <activity android:name=".ventas.cantproducto"></activity>
+        <activity android:name=".ventas.cantproducto">
+            <intent-filter>
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
