--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,19 @@
             android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Activities.Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
-        <activity android:name=".Activities.FormCliente" />
+        <activity android:name=".Activities.FormCliente"><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
         <activity android:name=".Activities.Informacion" />
-        <activity android:name=".ventas.RegistroVentas" />
-        <activity android:name=".Activities.MenuPrincipal" />
-        <activity android:name=".ventas.cantproducto"></activity>
+        <activity android:name=".ventas.RegistroVentas"></activity>
+        <activity android:name=".Activities.MenuPrincipal"></activity>
     </application>
 
 </manifest>
