--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.manrique_matus.salesapplication">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,24 +16,21 @@
             android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Activities.Login">
+
+        </activity>
+        <activity android:name=".Activities.FormCliente">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.FormCliente" />
         <activity android:name=".Activities.Informacion" />
-        <activity android:name=".ventas.RegistroVentas" />
-        <activity android:name=".Activities.MenuPrincipal" />
-        <activity android:name=".ventas.cantproducto"></activity>
+        <activity android:name=".ventas.RegistroVentas"></activity>
+        <activity android:name=".Activities.MenuPrincipal"></activity>
     </application>
 
 </manifest>
