--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,9 @@
 
         </activity>
         <activity android:name=".Activities.Informacion" />
-        <activity android:name=".ventas.RegistroVentas" />
+        <activity android:name=".Activities.RegistroVenta" />
         <activity android:name=".Activities.MenuPrincipal" />
-        <activity android:name=".ventas.cantproducto">
+        <activity android:name=".ventas.RegistroVentas">
             <intent-filter>
 
                 <category android:name="android.intent.category.LAUNCHER" />
